// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Handle the unknown Inference 1`] = `
<div>
  <label
    class="objectField "
  >
    <span
      class="title"
    />
  </label>
  <div>
    <div>
      <label
        class="numberField "
      >
        <span
          class="title"
        >
          number
        </span>
      </label>
      <input
        type="string"
        value="1"
      />
      <span />
      <span />
    </div>
    <div>
      <label
        class="stringField "
      >
        <span
          class="title"
        >
          string
        </span>
      </label>
      <input
        type="string"
        value=""
      />
      <span />
      <span />
    </div>
    <div>
      <label
        class="booleanField "
      >
        <span
          class="title"
        >
          boolean
        </span>
      </label>
      <input
        type="checkbox"
        value="false"
      />
      <span />
      <span />
    </div>
    <div>
      <label
        class="arrayField "
      >
        <span
          class="title"
        >
          array
        </span>
      </label>
      <div>
        <div />
        <button>
          +
        </button>
      </div>
      <span />
      <span />
    </div>
    <div>
      <label
        class="objectField "
      >
        <span
          class="title"
        >
          object
        </span>
      </label>
      <div />
      <span />
      <span />
    </div>
  </div>
  <span />
  <span />
</div>
`;

exports[`Handle the unknown Null: Undefined view null 1`] = `
<div>
  Undefined field type "null", []
</div>
`;

exports[`Handle the unknown Render a multiple type 1`] = `
<div>
  <label
    class="null,string,numberField "
  >
    <span
      class="title"
    />
  </label>
  <input
    type="string"
    value=""
  />
  <span />
  <span />
</div>
`;

exports[`Handle the unknown Unknown: Undefined view unknow 1`] = `
<div>
  Undefined field type "unknown", []
</div>
`;

exports[`Render fields with default values Default array 1`] = `
<div>
  <label
    class="arrayField "
  >
    <span
      class="title"
    />
  </label>
  <div>
    <div>
      <div>
        <button>
          -
        </button>
        <div>
          <label
            class="stringField "
          >
            <span
              class="title"
            >
              0
            </span>
          </label>
          <input
            type="string"
            value="string"
          />
          <span />
          <span />
        </div>
      </div>
    </div>
    <button>
      +
    </button>
  </div>
  <span />
  <span />
</div>
`;

exports[`Render fields with default values Default boolean 1`] = `
<div>
  <label
    class="booleanField "
  >
    <span
      class="title"
    />
  </label>
  <input
    type="checkbox"
    value="false"
  />
  <span />
  <span />
</div>
`;

exports[`Render fields with default values Default number 1`] = `
<div>
  <label
    class="numberField "
  >
    <span
      class="title"
    />
  </label>
  <input
    type="string"
    value="4"
  />
  <span />
  <span />
</div>
`;

exports[`Render fields with default values Default object 1`] = `
<div>
  <label
    class="objectField "
  >
    <span
      class="title"
    />
  </label>
  <div>
    <div>
      <label
        class="numberField "
      >
        <span
          class="title"
        >
          a
        </span>
      </label>
      <input
        type="string"
        value="1"
      />
      <span />
      <span />
    </div>
  </div>
  <span />
  <span />
</div>
`;

exports[`Render fields with default values Default string 1`] = `
<div>
  <label
    class="stringField "
  >
    <span
      class="title"
    />
  </label>
  <input
    type="string"
    value="String value"
  />
  <span />
  <span />
</div>
`;

exports[`renders a fallback view 1`] = `
<span>
  Widget for 'number' was not defined
</span>
`;
